<resources>
    <string name="app_name">OnlineSDR receiver</string>
    <string name="Notation">Hosanna to Ukraine!</string>
    <string name="Annotation">Testing version. Author: Natsuru-san</string>
    <string name="currentFreq">Current freq.</string>
    <string name="Alaw" translatable="false">A-law</string>
    <string name="Ulaw" translatable="false">μ-law</string>
    <string name="Depth8k">8 KHz</string>
    <string name="Depth16k">16 KHz</string>
    <string name="Depth">Depth audio</string>
    <string name="AM" translatable="false">AM</string>
    <string name="FM" translatable="false">FM</string>
    <string name="USB" translatable="false">USB</string>
    <string name="LSB" translatable="false">LSB</string>
    <string name="CW" translatable="false">CW</string>
    <string name="Squelch">Squelch</string>
    <string name="Autonotch">Autonotch</string>
    <string name="NoiseReduction">Noise reduction</string>
    <string name="Volume">Volume</string>
    <string name="VolumeValue" translatable="false">(100)</string>
    <string name="Gain">Gain</string>
    <string name="GainValue">(Auto)</string>
    <string name="Autogain">Autogain</string>
    <string name="Agchang" translatable="false">Agchang</string>
    <string name="AgchangValue">(Auto)</string>
    <string name="AgchangMax" translatable="false">4</string>
    <string name="AgchangMin" translatable="false">0</string>
    <string name="MaxGain" translatable="false">+30</string>
    <string name="MinGain" translatable="false">-100</string>
    <string name="khz"> KHz</string>
    <string name="Settings">Settings</string>
    <string name="Memory">Memory</string>
    <string name="Close">Close</string>
    <string name="About">About</string>
    <string name="AddToMemory">Add to memory</string>
    <string name="FreqInstance" translatable="false">0.0</string>
    <string name="VolumeMin" translatable="false">0</string>
    <string name="VolumeMax" translatable="false">100</string>
    <string name="PlayStatus">Play status</string>
    <string name="Menu">Menu</string>
    <string name="Delete">Delete</string>
    <string name="License" translatable="false">Licence: GPLv3</string>
    <string name="Contacts" translatable="false">E-mail: natsuru-san@mail.com</string>
    <string name="AsService">Working as service</string>
    <string name="src">Source code: https://github.com/natsuru-san/WebSDR</string>
    <string name="NotifyStatus">Notifications of the app has been disabled. Without them SDR-radio will not working. Please set enabling notifications in the settings of the phone.</string>
    <string name="FreqSpace" translatable="false">-------------------------------------------------</string>
    <string name="AboutTitle">About</string>
    <string name="Restart">Restart</string>
    <string name="AboutText">This software is a client to play software-defined radio.
As a server, the site "http://websdr.ewi.utwente.nl:8901", from where and transfers the radio flow to the client with the possibility of setting the necessary parameters by the client. Distribution of this server proprietary. Subsequently, in the process of further development, the client will be implemented the possibility of selecting the server to arbitrary.
The client is provided under the GPLv3 license. The "com.neovisionaries.ws.client" library included in it is provided by Apache v2.0 license.</string>
</resources>