<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FreqMem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/amiko"
        android:text="@string/FreqInstance"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ModulationMem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/amiko"
        android:text="@string/AM"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/FreqMem"
        app:layout_constraintStart_toEndOf="@+id/FreqMem"
        app:layout_constraintTop_toTopOf="@+id/FreqMem" />

    <TextView
        android:id="@+id/BordersMem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/amiko"
        android:text="@string/Depth8k"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/FreqMem"
        app:layout_constraintStart_toEndOf="@+id/ModulationMem"
        app:layout_constraintTop_toTopOf="@+id/FreqMem"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/DeleteMemBtn"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:background="?attr/colorOnSecondary"
        android:contentDescription="@string/Delete"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_busy"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/TuneMemBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorOnSecondary"
        android:contentDescription="@string/Delete"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/DeleteMemBtn"
        app:layout_constraintStart_toStartOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/transparent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>